--- a/wrangler.preview.jsonc
+++ b/wrangler.preview.jsonc
@@ -25,5 +25,6 @@
 		"ENVIRONMENT": "preview",
 		"BETTER_AUTH_URL": "https://auth-svc.boletrics.workers.dev",
 		"AUTH_TRUSTED_ORIGINS": "https://*.boletrics.workers.dev",
+		"AUTH_FRONTEND_URL": "https://auth.boletrics.workers.dev",
 	},
 }
